2010-12-21  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #16786: Versioning: Generating preview link not working (thanks to Frederic Gaus)

2010-12-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16760: RTE transformation removes all span tags on save after upgrade TYPO3 4.4.5

2010-12-21  Steffen Kamper  <steffen@typo3.org>

	* Merged new PageTree (version for TYPO3 4.5 Beta 3)
	* Fixed bug #16804: Bug/Prerequisite for the new pagetree: refresh pageTree with updateSignal, use new shortcuts in JS (Thanks to Stefan Galinski)
	* Fixed bug #16803: Bug/Prerequisite for the new pagetree: Extend getRecordWSOL with possibility to unset workspace move pointers (Thanks to Susanne Moog)
	* Fixed bug #16802: iFramePanel needs function to detect id in URL

2010-12-21  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #16795: t3lib_div::unQuoteFilenames fails to detect quotes properly (Thanks to Joerg Wagner, Steffen Ritter, Steffen Gebert, and others)

2010-12-20  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #16134: TYPO3 doesn't always fix permissions for new files

2010-12-20  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16778: Test failures in t3lib_tree_NodeTest if tests are in typo3_src/tests/ instead of tests/ (Thanks to Oliver Klee)
	* Follow-up to #16031: forgotten field recursive for plugins
	* Fixed bug #16780: PHP warning in any system BE module

2010-12-19  Steffen Gebert  <steffen@steffen-gebert.de>

	* Follow-up to #16779: t3lib_cache_backend_RedisBackendTest causes t3lib_db_PreparedStatementTest tests to fail (Thanks to Oliver Klee)
	* Fixed bug #16777: Test failure in t3lib_extmgmTest if tests are located in typo3_src/tests/ instead of tests/ (Thanks to Oliver Klee)
	* Fixed bug #16790: Typo in topbar CSS

2010-12-18  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #16771: Change ugly formatting of "pageNotFound_handling" and "pageUnavailable_handling"

2010-12-18  Steffen Gebert  <steffen@steffen-gebert.de>
