@@ -5,6 +5,7 @@
 2010-12-21  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #16760: RTE transformation removes all span tags on save after upgrade TYPO3 4.4.5
+	* Fixed bug #16805: htmlArea RTE: Clicking a label should set the focus on the input field
 
 2010-12-21  Steffen Kamper  <steffen@typo3.org>
 
